<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/listbg" >
    
    <com.pp.musicplayer.util.LrcView 
        android:id="@+id/LyricShow"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/LyricShow"
        android:textColor="#99ffffff"/>
    
    <LinearLayout 
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/appbackground"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="5dp">
        
        <TextView 
            android:id="@+id/music_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/music_name"
            android:textSize="18sp"
            android:textColor="@color/textColor"/>
        
        <TextView 
            android:id="@+id/music_artist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/music_artist"
            android:textColor="@color/textColor"/>
        
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            
            <ImageButton 
                android:id="@+id/music_loop"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/play_loop_sel"
                android:contentDescription="@string/music_loop"/>
            
            <SeekBar 
                android:id="@+id/music_volume"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:max="100"
                android:progress="50"
                android:progressDrawable="@drawable/seekbar_img"
                android:thumb="@drawable/media_player_progress_button"/>
            
            <ImageButton 
                android:id="@+id/music_random"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/play_random_sel"
                android:contentDescription="@string/music_random"/>
        </LinearLayout>
    </LinearLayout>
    
       <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/button"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="5dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/music_start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="2dp"
                android:text="@string/music_start_time"
                android:textColor="@color/textColor" />

            <SeekBar
                android:id="@+id/music_seekBar"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:max="100"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:progressDrawable="@drawable/seekbar_img"
                android:thumb="@drawable/media_player_progress_button" />

            <TextView
                android:id="@+id/music_end_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="2dp"
                android:text="@string/music_end_time"
                android:textColor="@color/textColor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/music_lasted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:contentDescription="@string/music_lasted"
                android:src="@drawable/latest1" />

            <ImageButton
                android:id="@+id/music_rewind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:contentDescription="@string/music_rewind"
                android:src="@drawable/rewind" />

            <ImageButton
                android:id="@+id/music_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:contentDescription="@string/music_play"
                android:src="@drawable/play1" />

            <ImageButton
                android:id="@+id/music_foward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:contentDescription="@string/music_foward"
                android:src="@drawable/foward" />

            <ImageButton
                android:id="@+id/music_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/music_next"
                android:src="@drawable/next1" />
        </LinearLayout>
    </LinearLayout>
    

</RelativeLayout>
