<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="2dp"
    android:background="#00000000"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/music_item_image"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:background="@drawable/item"
        android:paddingRight="10dip"
        android:contentDescription="@string/music_item_image" />
    
    <LinearLayout 
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_weight="1"
        android:layout_marginLeft="3dp"
        android:gravity="center_vertical"
        android:orientation="vertical">
        
        <TextView 
            android:id="@+id/music_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            android:text="@string/music_name"
            android:textStyle="bold"/>
        
        <TextView 
            android:id="@+id/music_item_artist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="5dp"
            android:textColor="@color/textColor"
            android:textSize="12sp"
            android:text="@string/music_artist"/>
    </LinearLayout>
    
    <TextView 
        android:id="@+id/music_item_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingRight="5dp"
        android:text="@string/music_item_time"
        android:textColor="@color/textColor"/>

</LinearLayout>
